--- a/Src/GithubX/GithubXamarin.Droid/Resources/layout/contents_item_template.axml
+++ b/Src/GithubX/GithubXamarin.Droid/Resources/layout/contents_item_template.axml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingBottom="1dp">
-    <android.support.v7.widget.CardView
+    <!--android.support.v7.widget.CardView
         android:layout_gravity="center_horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -31,5 +31,5 @@
                     android:textColor="@color/abc_primary_text_material_light"
                     cardview:MvxBind="Text Name" />
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+    </android.support.v7.widget.CardView-->
 </LinearLayout>
